<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UI.ConfigFragment">
    <data>
        <variable
            name="user"
            type="com.example.guessnumberfragment.data.User"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".UI.ConfigActivity">

            <TextView
                android:id="@+id/tvUserText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvUserTextMarginTop"
                android:minHeight="@dimen/tvUserTextMinHeight"
                android:text="@string/tvUserTextText" />

            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/etUserMarginTop"
                android:autofillHints=""
                android:hint="@string/etUserHint"
                android:inputType="text"
                android:minHeight="@dimen/etUserMinHeight"
                android:text="@={user.name}"
                android:textColorHint="@color/etUserColorHint" />

            <TextView
                android:id="@+id/tvMessageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tvMessageTextMarginTop"
                android:minHeight="@dimen/tvUserTextMinHeight"
                android:text="@string/tvMessageTextText" />

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/etMessageMarginTop"
                android:autofillHints=""
                android:hint="@string/etMessageHint"
                android:inputType="number"
                android:minHeight="@dimen/etMessageMinHeight"
                android:text="@={user.intentosMax}"
                android:textColorHint="@color/etMessageColorHint" />

            <Button
                android:id="@+id/btSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/btSendMarginTop"
                android:text="@string/btSendText" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>